--- a/layout.html
+++ b/layout.html
@@ -98,7 +98,7 @@
         {% if site.has_header_image? %}
         <div class="header-image">
 	        <div class="width-container">
-	         <img src="{{ site.header_image_url_1026 }}" class="header-image" border="0" />
+	         <img src="{{ site.header_image_url_1026 }}" width="960" class="header-image" border="0" />
 	        </div>
         </div>
         {% endif %}
