--- a/layout.html
+++ b/layout.html
@@ -20,9 +20,14 @@ Layout.Html
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ page_title }}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+ 
+ 
   <link rel="stylesheet" href="theme.scss" type="text/css">
   <link rel="stylesheet" href="tablet-and-desktop.scss" type="text/css" media="screen and (min-width: 768px)">
-
+  <link rel="stylesheet" type="text/css" href="map-style.css"> 
+  
+ 
   <!-- because ie8 ignores media queries, we need this -->
   <!--[if IE 8]>
     <link rel="stylesheet" href="tablet-and-desktop.scss" type="text/css">
@@ -39,8 +44,25 @@ Layout.Html
     NB.appConfig.userIsLoggedIn = {{request.logged_in?}};
   </script>
 
+  <script type="text/javascript" src="jquery.ui.effect.min.js"></script>
+  <script type="text/javascript" src="jquery.ui.effect-slide.min.js"></script>
+  <script type="text/javascript" src="staged-donations.js"></script>
+  <script src="map-config.js" type="text/javascript"></script>
+  <script src="map-interact.js" type="text/javascript"></script>
+
+  <link href='//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic|Oswald:400,300,700|Lato:400,700,400italic,700italic|Bree+Serif|Josefin+Sans:700|Bitter:400,700,400italic|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
+
 </head>
-<body class="aware-theme v2-theme {{ page.page_class_name }} js">
+<body class="aware-theme v2-theme {{ page.page_class_name }} js {% if site.has_background_image? %}with-background{% endif %}">
+  {% if site.has_header_image? %}
+    <div class="site-header" style="background: url({{ site.header_image_url_1026 }}) center no-repeat;">
+      <div class="width-container">
+        <div class="site-subheadline">
+          {{ site.subheadline }}
+        </div>
+      </div>
+    </div>
+  {% endif %}
   <div id="pattern" class="pattern">
     <div class="wrap" id="wrap">
       <div id="body" class="page-{{ request.template | replace: '_', '-' }}">
@@ -56,6 +78,17 @@ Layout.Html
                 <h1 class="title"><a href="/">{{ site.long_name }}</a></h1>
               </header>
             {% endif %}
+
+ <div <h1 class="header-text">Backcountry Hunters &amp; Anglers</h1></div>
+
+            <div class="header-signup desktop-visible">
+              {% if request.logged_in? or request.sorta_logged_in? or page.page_class_name == 'page-type-donation' or page.page_class_name == 'page-type-signup' or page.page_class_name == 'page-type-volunteer-signup' or request.template == 'user_sessions_new_wide' or page.request.template == 'user_sessions_new'%}
+              {% else %}
+                {% include "signup_form" with site.signup_page %}
+              {% endif %}
+            </div>
+
+
 			 {% include "nav" %}
           </div>
           <!-- .width-container -->
