--- a/_blog_latest.html
+++ b/_blog_latest.html
@@ -1,4 +1,4 @@
-{% for post in tag.most_recent_published_pages_no_pagination limit:6 offset:0 %}
+]{% for post in tag.most_recent_published_pages_no_pagination limit:6 offset:0 %}
 <div class="blog-post">
 	<div class="image">
 		{% for image in post.attachments limit:1 %}
